<resources>
    <string name="app_name">cab sharing</string>
    <string name="logout">logout</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cab_sharing">Cab sharing</string>
    <string name="sign_up">Sign up</string>
    <string name="signup">SIGNUP</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="cabsharing">Cab sharing</string>
    <string name="already_have_an_account_login">Already have an account? login</string>
    <string name="confirm_password">Confirm password</string>
    <string name="welcome_to_cab_sharing">welcome to cab sharing</string>
    <string name="or_with">or with</string>
</resources>
